--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1740,107 +1740,107 @@ stories:
   domain: http://www.observer.com/
   link: https://www.moultrieobserver.com/news/at-each-end-of-pacific-skepticism-over-china-farm-purchases/article_5af8f29c-27fa-11ea-a7ee-9fcd889e478b.html
 images:
-- name: downtheline-downtheline-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-light-dali.jpg
-- name: oldbarn-oldbarn-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crafty-painting.jpg
-- name: paris-paris-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-dream.jpg
-- name: bluelake-gan-vogh-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-01-17-38.jpg
-- name: rain-princess-DSC_0017.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0017.jpg
-- name: copper-circuit-castle-clouds-green-lawn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-clouds-green-lawn.jpg
-- name: lincoln-memorial-lincolnmemorial-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-internet-numbers.jpg
-- name: copper-circuit-IMG_7831.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7831.jpg
-- name: rain-princess-city-skyline-bright.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-skyline-bright.jpg
-- name: nazi-invasion-small-town-street-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-small-town-street-2.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-umberto-bocc.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-umberto-bocc.JPG
-- name: supreme-court-supremecourt-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-alien-goggles.jpg
-- name: power-lines-power-lines-empty-space-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-mucha-mult.jpg
-- name: nyc-flag-nycflag-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-spagetti-accident.jpg
-- name: nazi-invasion-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-lawn-view.jpg
-- name: sand-hand-sand-hand-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-5.jpg
-- name: paris-paris.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris.jpg
-- name: oldtrain-oldtrain-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-mucha-mult.jpg
-- name: white-house-lawn-white-house-lawn-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dark-rain.jpg
-- name: oldsmallboat-oldsmallboat-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-alberto-giacometti.jpg
-- name: supreme-court-supremecourt-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-bright-sand.jpg
-- name: liberty-back-statue-liberty-back-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-pablo-blue.jpg
-- name: nyc-flag-nycflag-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-kand-two.jpg
-- name: catacombs-catacombs-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-aqua.jpg
-- name: oldsmallboat-oldsmallboat-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-smoking-cigarette.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
-- name: aws-s3-stories-servers-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-servers-blue-circuit.jpg
-- name: white-house-lawn-white-house-lawn-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-two.jpg
-- name: white-house-lawn-white-house-lawn-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
-- name: dc-statue-dcstatue-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-neo-instinct.jpg
-- name: rockingchair-rockingchair-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-clean-view.jpg
-- name: oldhouse-granaryfield-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-crabapple.jpg
-- name: rockingchair-face-2-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-aqua.jpg
-- name: oldsmallboat-oldsmallboat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat.jpg
-- name: old-gas-pumps-oldgaspumps-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-space-pizza.jpg
-- name: stories-status-berlin-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-dark-dali.jpg
-- name: border-fence-border-fence-on-hill-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-soul.jpg
-- name: san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
-- name: stalin-time-old-barn-falling-over.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-barn-falling-over.jpg
-- name: old-granary-field-oldhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-constitution.jpg
-- name: legal-statue-legalstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-clean-view.jpg
-- name: bordercrossing-bordercrossing-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-matrix.jpg
-- name: bf-skinner-astoria-bridge-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-astoria-bridge-columbia.jpg
-- name: status-berlin-status-berlin-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-constitution.jpg
-- name: school-clouds-church-clouds-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-rain.jpg
-- name: hollywood-building-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-marcel-duchamp.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
-- name: la-muse-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grain-ship-docking-grass.jpg
-- name: catacombs-catacombs-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
-- name: old-house-oldhouse-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-mucha-mult.jpg
-- name: containership-containership-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crafty-painting.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dali-two.jpg
+- name: la-muse-hollywood-sign-with-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hollywood-sign-with-tower.jpg
+- name: bf-skinner-train-subway-125th-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-subway-125th-down-the-line.jpg
+- name: stalin-time-screaming-face-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-screaming-face-statue.jpg
+- name: blossombar-creativity-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-00-00.jpg
+- name: stalin-time-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-capital_36728421355_o.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sand-paper.jpg
+- name: store-on-corner-store-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-far-away.jpg
+- name: windowmountain-window-mountain-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-brush.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
+- name: border-crossing-bordercrossing-dark-soul.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-soul.png
+- name: gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
+- name: crow_purp_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purp_paper.jpg
+- name: blossombar-space-pizza-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-24-99.jpg
+- name: old-barn-old-barn-1500-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dry-skin.jpg
+- name: birdhouse-birdhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-umberto-bocc.jpg
+- name: bf-skinner-freeway-carss-overpass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-freeway-carss-overpass.jpg
+- name: power-lines-power-lines-empty-space-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-two.jpg
+- name: border-fence-border-fence-on-hill-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-really-hot.jpg
+- name: old-gas-pumps-oldgaspumps-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-clean-view.jpg
+- name: berlinwall2-berlinwall-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-emily-carr.jpg
+- name: aws-s3-stories-fence-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-crabapple.jpg
+- name: stalin-time-nyc-subway-train-125th.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-nyc-subway-train-125th.jpg
+- name: fence-mexico-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-bright-sand.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+- name: la-muse-high-speed-train-station-france.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-high-speed-train-station-france.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crunch-paper.jpg
+- name: store-on-corner-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-constitution.jpg
+- name: flower-barbed-wire-flower-barbed-wire-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purple-pond.jpg
+- name: stalin-time-old-gas-station_36588462091_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-gas-station_36588462091_o.jpg
+- name: copper-circuit-high-speed-train-station-france.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-high-speed-train-station-france.jpg
+- name: docks-docks-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-colorful-dream.jpg
+- name: flower-barbed-wire-flower-barbed-wire-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-smooth-ride.jpg
+- name: white-house-lawn-white-house-window-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-sunday.jpg
+- name: nazi-invasion-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-adam-smith-edinburgh.jpg
+- name: flower-barbed-wire-flower-barbed-wire-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-deep-connections.jpg
+- name: oldcabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-really-hot.jpg
+- name: birdhouse-birdhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-sand-paper.jpg
+- name: yosemite-yosemite-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-dali.jpg
+- name: razorcliff-razorcliff-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-ww2-color.jpg
+- name: birdhouse-birdhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-rainbow-festival.jpg
+- name: braceros-domingo-ulloa-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital-records-building.jpg
+- name: copper-circuit-train-tracks-bending.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-tracks-bending.jpg
+- name: mosaic-face-mosaic-face-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dark-rain.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
+- name: gypsymosaic-gypsy-eyes-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-electricity.jpg
+- name: blossombar-purp-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purp-paper-file-00-00-50-62.jpg
+- name: copper-circuit-statue-of-liberty_36744433525_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty_36744433525_o.jpg
+- name: stories-oldgaspumps-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-oldgaspumps-umberto-bocc.jpg
+- name: catacombs-catacombs-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-rain.jpg
+- name: white-house-lawn-white-house-lawn-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-neo-instinct.jpg
 ---
 Heres How The Raiders Can Clinch A Playoff Berth On Sunday.&nbsp;Credits Way To Recoup Value.&nbsp;California Jails Use Kinder Approach To Solitary Confinement.&nbsp;Redwood Tree Falls, Kills Hiker In California Park.&nbsp;Titans Need Win Against Texans On Sunday For Playoff Berth.&nbsp;Woman Delivers Packages Mistakenly Left At Her House.&nbsp;What Will It Take To Beat Donald Trump?.&nbsp;Giants Have A Shot To Spoil Philadelphia Eagles' Playoff Bid.&nbsp;
